objects/Case.object
<CustomObject>
    <fields>
        <fullName>Patient_contacted__c</fullName>
        <label>Patient contacted</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1st</fullName>
                </value>
                <value>
                    <fullName>2nd</fullName>
                </value>
                <value>
                    <fullName>3rd</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payor_Price__c</fullName>
        <label>Payor Price</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payor__c</fullName>
        <label>Payor</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Physician__c</fullName>
        <label>Physician</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy__c</fullName>
        <label>Policy #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Preprint_Int_l_TRFs__c</fullName>
        <label>Preprint Int&apos;l TRFs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Preprint_TRFs__c</fullName>
        <inlineHelpText>546856 - Guardant Health 360 Preprinted TRF (Site Specific) - TST-TRF-001 v1</inlineHelpText>
        <label>Preprint TRFs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prior_Auth_Type__c</fullName>
        <label>Prior Auth Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Client driven</fullName>
                </value>
                <value>
                    <fullName>Faxed Gap Request</fullName>
                </value>
                <value>
                    <fullName>Gap Exception</fullName>
                </value>
                <value>
                    <fullName>Internally driven</fullName>
                </value>
                <value>
                    <fullName>Retro</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prior_Authorization__c</fullName>
        <inlineHelpText>Prior Authorization # used by payor</inlineHelpText>
        <label>Prior Authorization #</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pt_DOB__c</fullName>
        <label>Pt. DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Pt_First_Name__c</fullName>
        <description>Used only for PA Cases. To change this, change field security</description>
        <label>Pt. First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pt_Last_Name__c</fullName>
        <description>Used only for PA cases. To change this, change field security.</description>
        <label>Pt. Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pt_Name__c</fullName>
        <label>Pt. Name</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pt_State__c</fullName>
        <description>Used to determine Federal Poverty Level based on patient&apos;s state of residence. Alaska, Hawaii, Lower 48</description>
        <formula>CASE(PatientCase__r.State__c, &quot;AK&quot;, &apos;AK&apos;, &quot;HI&quot;, &apos;HI&apos;, &apos;48&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pt State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pt_Status_Medicare_Only__c</fullName>
        <label>Patient Status (Medicare Only)</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Push_To_TheraPak_Date__c</fullName>
        <label>Push To TheraPak Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Push_To_TheraPak__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Push To TheraPak</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RCH_Follow_Up_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Relevant Clinical History. Checked = Follow-up is needed</inlineHelpText>
        <label>RCH Follow-Up Needed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RETEST_Notify_AE__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Uses email template &apos;Case: Alert AE of Retest Delay&apos;</description>
        <inlineHelpText>Checking this box will notify the AE of delays due to second tube draw.</inlineHelpText>
        <label>RETEST-Notify AE</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RUO_Preprinted_TRF__c</fullName>
        <inlineHelpText>550454 - Preprinted
RUO TRF: FRM-PRT-000020 R1</inlineHelpText>
        <label>RUO Preprinted TRF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recall__c</fullName>
        <label>Recall?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Record_Type_ID__c</fullName>
        <formula>RecordType.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Refax_Patient_Report_Reason__c</fullName>
        <label>Refax Patient Report Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Activity_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Addt&apos;l copy requested</fullName>
                </value>
                <value>
                    <fullName>Poor quality</fullName>
                </value>
                <value>
                    <fullName>Fax machine issues</fullName>
                </value>
                <value>
                    <fullName>Original not received</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relevant_Clinical_History_NSCLC__c</fullName>
        <label>Relevant Clinical History NSCLC</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remaining_decductible__c</fullName>
        <label>Remaining deductible</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Reportable__c</fullName>
        <label>Reportable?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reported_By__c</fullName>
        <label>Reported By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Request_No__c</fullName>
        <externalId>true</externalId>
        <label>Request No</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Request_Type__c</fullName>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Activity_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>New Account Setup</fullName>
                </value>
                <value>
                    <fullName>Add/Edit Users</fullName>
                </value>
                <value>
                    <fullName>Technical Issue</fullName>
                </value>
                <value>
                    <fullName>Reset Password</fullName>
                </value>
                <value>
                    <fullName>User Training</fullName>
                </value>
                <value>
                    <fullName>Add Account ID</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Residual_income__c</fullName>
        <label>Residual income</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Resolution__c</fullName>
        <label>Resolution</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resolved_indicator__c</fullName>
        <label>Resolved Indicator</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Stage I/II – please cancel</fullName>
                </value>
                <value>
                    <fullName>Stage III/IV</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Amended</fullName>
                </value>
                <value>
                    <fullName>Processed</fullName>
                </value>
                <value>
                    <fullName>Client Error</fullName>
                </value>
                <value>
                    <fullName>GH Error</fullName>
                </value>
                <value>
                    <fullName>Xifin Error</fullName>
                </value>
                <value>
                    <fullName>Vendor Error</fullName>
                </value>
                <value>
                    <fullName>Undetermined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rush_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Checking this box forces the Due Date to be today.  The order must still be pushed before the order cutoff time.</inlineHelpText>
        <label>Rush Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SYM_Preprinted_TRF__c</fullName>
        <inlineHelpText>Item 551226-PrePrinted</inlineHelpText>
        <label>SYM Preprinted TRF</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sample_Aging__c</fullName>
        <formula>IF(ISBLANK(Sample_Final_Report_Date__c),TODAY()- Sample_Received_Date__c , 
(Sample_Final_Report_Date__c) - (Sample_Received_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sample Aging</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sample_Final_Report_Date__c</fullName>
        <label>Sample Final Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sample_Received_Date__c</fullName>
        <label>Sample Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sample_Request_Type__c</fullName>
        <formula>TEXT (Guardant_360_Sample__r.Request_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sample Request Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Search_Data_1__c</fullName>
        <externalId>true</externalId>
        <label>Search Data 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Second_Attempt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Second Attempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Seconds_Since_Push_Request__c</fullName>
        <formula>(NOW() - Push_To_TheraPak_Date__c)*24*60*60</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Seconds Since Push Request</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Send_Email_Notification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Email Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address_1__c</fullName>
        <label>Ship To Address 1</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address_2__c</fullName>
        <label>Ship To Address 2</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_City__c</fullName>
        <label>Ship To City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Company__c</fullName>
        <label>Ship To Company</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Contact_Email__c</fullName>
        <inlineHelpText>Email Address for the &apos;Ship To&apos; Contact</inlineHelpText>
        <label>Ship To Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Ship_To_Contact__c</fullName>
        <label>Ship To Contact</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Country__c</fullName>
        <label>Ship To Country</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Phone__c</fullName>
        <label>Ship To Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Ship_To_Postal_Code__c</fullName>
        <label>Ship To Postal Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_State_Province__c</fullName>
        <label>Ship To State/Province</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Method__c</fullName>
        <label>Shipping Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FedEx Standard Overnight</fullName>
                </value>
                <value>
                    <fullName>FedEx 2 Day</fullName>
                </value>
                <value>
                    <fullName>FedEx Express Saver</fullName>
                </value>
                <value>
                    <fullName>FedEx Ground</fullName>
                </value>
                <value>
                    <fullName>FedEx Priority Overnight</fullName>
                </value>
                <value>
                    <fullName>FedEx Int&apos;l Priority</fullName>
                </value>
                <value>
                    <fullName>World Courier</fullName>
                </value>
                <value>
                    <fullName>No Courier</fullName>
                    <label>No Courier ONLY USE FOR BRAZIL</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_Instructions__c</fullName>
        <label>Special Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Spoke_To__c</fullName>
        <label>Spoke to</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Insurance Co</fullName>
                </value>
                <value>
                    <fullName>MD/office</fullName>
                </value>
                <value>
                    <fullName>Patient/family</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Supplies_TheraPak_Pending_Count__c</fullName>
        <label>Supplies TheraPak Pending Count</label>
        <summaryFilterItems>
            <field>Supplies_Order_Line__c.TheraPak_Status__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </summaryFilterItems>
        <summaryForeignKey>Supplies_Order_Line__c.Case__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>TRF_Type__c</fullName>
        <label>TRF Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Issue__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>2nd Recipient demo -  missing</fullName>
                </value>
                <value>
                    <fullName>2nd Recipient demo -  verify</fullName>
                </value>
                <value>
                    <fullName>2nd Recipient not in LIMS</fullName>
                </value>
                <value>
                    <fullName>Barcode - missing</fullName>
                </value>
                <value>
                    <fullName>Billing - missing</fullName>
                </value>
                <value>
                    <fullName>Billing - verify</fullName>
                </value>
                <value>
                    <fullName>Cancer Type - missing</fullName>
                    <label>Cancer Type - missing/verify</label>
                </value>
                <value>
                    <fullName>Collection Date - missing</fullName>
                </value>
                <value>
                    <fullName>Collection date -  verify</fullName>
                </value>
                <value>
                    <fullName>ICD9 Code(s) - missing</fullName>
                    <label>ICD10 Code(s) - missing</label>
                </value>
                <value>
                    <fullName>ICD9 Code(s) - verify</fullName>
                    <label>ICD10 Code(s) - verify</label>
                </value>
                <value>
                    <fullName>MD demo - missing</fullName>
                </value>
                <value>
                    <fullName>MD demo - verify</fullName>
                </value>
                <value>
                    <fullName>MD Name - missing</fullName>
                </value>
                <value>
                    <fullName>MD not in LIMS</fullName>
                </value>
                <value>
                    <fullName>MD Signature missing</fullName>
                </value>
                <value>
                    <fullName>Missing TRF</fullName>
                </value>
                <value>
                    <fullName>Patient demo - missing</fullName>
                </value>
                <value>
                    <fullName>Patient demo -  verify</fullName>
                </value>
                <value>
                    <fullName>Stage I/II circled – verify</fullName>
                </value>
                <value>
                    <fullName>Stage III/IV - missing/verify</fullName>
                </value>
                <value>
                    <fullName>Test Ordered missing</fullName>
                </value>
                <value>
                    <fullName>TRF back page missing</fullName>
                </value>
                <value>
                    <fullName>* LCD - unapproved ICD</fullName>
                </value>
                <value>
                    <fullName>* Notify - Hospital Bill</fullName>
                </value>
                <value>
                    <fullName>* Patient Status missing/verify</fullName>
                </value>
                <value>
                    <fullName>* Relevant Clinical History missing</fullName>
                </value>
                <value>
                    <fullName>PHARMA: OTHER, see notes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TUBE_Type__c</fullName>
        <label>TUBE Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Issue__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Missing Tube(s)</fullName>
                </value>
                <value>
                    <fullName>Single Identifier</fullName>
                </value>
                <value>
                    <fullName>Barcode - missing</fullName>
                </value>
                <value>
                    <fullName>QNS</fullName>
                </value>
                <value>
                    <fullName>Broken (1 tube)</fullName>
                </value>
                <value>
                    <fullName>Broken (all tubes)</fullName>
                </value>
                <value>
                    <fullName>Mislabeled/unlabeled tube(s)</fullName>
                </value>
                <value>
                    <fullName>Expired tubes</fullName>
                </value>
                <value>
                    <fullName>Wrong tube type</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technical_Reason__c</fullName>
        <label>Technical Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Technical_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Deceased</fullName>
                </value>
                <value>
                    <fullName>Unspecified</fullName>
                </value>
                <value>
                    <fullName>Alternative Treatment</fullName>
                </value>
                <value>
                    <fullName>Financial</fullName>
                </value>
                <value>
                    <fullName>Lab issue</fullName>
                </value>
                <value>
                    <fullName>Missing Identifier</fullName>
                </value>
                <value>
                    <fullName>Missing Signature</fullName>
                </value>
                <value>
                    <fullName>Missing Information</fullName>
                </value>
                <value>
                    <fullName>Couldn&apos;t Qualify</fullName>
                </value>
                <value>
                    <fullName>Broken/Leaked</fullName>
                </value>
                <value>
                    <fullName>Expired Tube</fullName>
                </value>
                <value>
                    <fullName>Compromised</fullName>
                </value>
                <value>
                    <fullName>Identifier</fullName>
                </value>
                <value>
                    <fullName>QNS</fullName>
                </value>
                <value>
                    <fullName>Wrong Tube</fullName>
                </value>
                <value>
                    <fullName>Dr. Hold</fullName>
                </value>
                <value>
                    <fullName>Case Resolution Delayed</fullName>
                </value>
                <value>
                    <fullName>Qualification Delayed</fullName>
                </value>
                <value>
                    <fullName>Patient Demo</fullName>
                </value>
                <value>
                    <fullName>Physician Demo</fullName>
                </value>
                <value>
                    <fullName>Results related</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>LONG TAIL</fullName>
                </value>
                <value>
                    <fullName>UVP</fullName>
                </value>
                <value>
                    <fullName>Stage I/II</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technical_Type__c</fullName>
        <label>Technical Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Initiated__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Client Request</fullName>
                </value>
                <value>
                    <fullName>Technical</fullName>
                </value>
                <value>
                    <fullName>TRF</fullName>
                </value>
                <value>
                    <fullName>Specimen</fullName>
                </value>
                <value>
                    <fullName>TAT ALERT</fullName>
                </value>
                <value>
                    <fullName>AMEND</fullName>
                </value>
                <value>
                    <fullName>CORRECTED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TheraPak_Status__c</fullName>
        <label>TheraPak Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never Sent</fullName>
                    <default>true</default>
                    <label>Never Sent</label>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>In Queue</fullName>
                </value>
                <value>
                    <fullName>In Shipping</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Third_Attempt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Third Attempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Kits__c</fullName>
        <description>Sum of CLIA Calif LDT Kits + CE Kits-Clinical (EU) + Kits-Clinical (Int&apos;l-Not EU). Used for CS reporting/dashboards.</description>
        <formula>Kits_Clinical_domestic__c +CE_Kits_Clinical_EU__c + Kits_Clinical_int_l__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of CLIA Calif LDT Kits + CE Kits-Clinical (EU) + Kits-Clinical (Int&apos;l-Not EU). Used for CS reporting/dashboards.</inlineHelpText>
        <label>Total Kits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tracking_Number__c</fullName>
        <label>Tracking Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Trf_Version__c</fullName>
        <label>Trf Version</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tubeless_Kits_Int_l__c</fullName>
        <label>Tubeless Kits – Int’l</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tubes_5_pack_Bio_bags__c</fullName>
        <inlineHelpText>378808 - Guardant Health Spare Supplies Kit</inlineHelpText>
        <label>Tubes-5 pack/Bio bags</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unreported_Sample_Alert_Date__c</fullName>
        <formula>Guardant_360_Sample__r.Unreported_Sample_Alert_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unreported Sample Alert Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WF_Gross__c</fullName>
        <description>To be uploaded. WF=Windfall. Used for Financial cases</description>
        <label>WF Gross</label>
        <precision>13</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X18Digit_record_Type_ID__c</fullName>
        <formula>CASESAFEID( RecordTypeId )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18Digit record Type ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1_5_Qt_Sharps_Container__c</fullName>
        <label>1.5 Qt. Sharps Container</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1st_Attempt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>1st Attempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X2nd_Attempt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>2nd Attempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X3rd_Attempt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>3rd Attempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X4th_Attempt__c</fullName>
        <defaultValue>false</defaultValue>
        <label>4th Attempt</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>talkdesk__Auto_Pop_up_Case__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Pop-up Case</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>talkdesk__Pop_Up_Destination__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pop Up Destination</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>hidden field used to prompt field updates</description>
        <label>update</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>